--- a/web/index.html
+++ b/web/index.html
@@ -100,5 +100,10 @@
       loadMainDartJs();
     }
   </script>
+  <!-- PDF viewer dependency -->
+  <script src="//cdnjs.cloudflare.com/ajax/libs/pdf.js/2.4.456/pdf.min.js"></script>
+  <script type="text/javascript">
+     pdfjsLib.GlobalWorkerOptions.workerSrc = "//cdnjs.cloudflare.com/ajax/libs/pdf.js/2.4.456/pdf.worker.min.js";
+  </script>
 </body>
 </html>
