--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html prefix="og: https://ogp.me/ns#">
+<html prefix="og: https://ogp.me/ns#" lang="en">
   <head>
     <!--
     If you are serving your web app in a path other than the root, change the
@@ -79,6 +79,7 @@
       content="Akshay Charwekar is Software Enigneer at Finastra."
     />
     <meta property="twitter:image" content="images/screenshot.png" />
+    <meta flt-viewport="" name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
   <body
