Started SEO optimization

--- a/web/index.html
+++ b/web/index.html
@@ -53,33 +53,37 @@
     <!-- Meta tags for OGP -->
 
     <!-- Primary Meta Tags -->
-    <title>Akshay Charwekar</title>
-    <meta name="title" content="Akshay Charwekar" />
+    <title>Akshay Charwekar::Software Enginner</title>
+    <meta name="title" content="Akshay Charwekar::Software Enginner" />
     <meta
       name="description"
-      content="Akshay Charwekar is Software Enigneer at Finastra."
+      content="I'm Akshay Charwekar, and I'd like to welcome you to my website. I'm a software developer with over 2.5 years of IT expertise. ."
     />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://charwekarakshay.github.io/" />
     <meta property="og:title" content="Akshay Charwekar" />
-    <meta
+    <!-- <meta
       property="og:description"
-      content="Akshay Charwekar is Software Enigneer at Finastra."
-    />
+      content="I'm Akshay Charwekar, and I'd like to welcome you to my website. I'm a software developer with over 2.5 years of IT expertise. "
+    /> -->
     <meta property="og:image" content="images/screenshot.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://charwekarakshay.github.io/" />
     <meta property="twitter:title" content="Akshay Charwekar" />
-    <meta
+    <!-- <meta
       property="twitter:description"
-      content="Akshay Charwekar is Software Enigneer at Finastra."
-    />
+      content="I'm Akshay Charwekar, and I'd like to welcome you to my website. I'm a software developer with over 2.5 years of IT expertise. "
+    /> -->
     <meta property="twitter:image" content="images/screenshot.png" />
-    <meta flt-viewport="" name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta
+      flt-viewport=""
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
   </head>
 
   <body
